# ChangeLog for net-misc/nxnode
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/ChangeLog,v 1.6 2007/06/21 20:19:37 voyageur Exp $

*nxnode-3.0.0 (21 Jun 2007)

  21 Jun 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +files/nxnode-3.0.0-setup.patch, +nxnode-3.0.0.ebuild:
  Version bump, thanks to Timo Gurr <psy@monsterserver.de> in bug #182779

  27 May 2007; Bernard Cafarelli <voyageur@gentoo.org> nxnode-2.1.0.ebuild:
  Dropped glib-1.2 dependency

  12 May 2007; Bernard Cafarelli <voyageur@gentoo.org> metadata.xml:
  Fixed maintainer in metadata.xml

  28 Apr 2007; Sven Wegener <swegener@gentoo.org> nxnode-2.1.0.ebuild:
  Fix *initd, *confd and *envd calls (#17388, #174266)

  26 Apr 2007; Bernard Cafarelli <voyageur@gentoo.org> nxnode-2.1.0.ebuild:
  Cleaning old blockers

*nxnode-2.1.0 (30 Mar 2007)

  30 Mar 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +files/nxnode-2.1.0-init, +files/nxnode-2.1.0-setup.patch, +metadata.xml,
  +nxnode-2.1.0.ebuild:
  Initial commit, bug #153866
